vendor/impl-trait-for-tuples/tests/ui/missing_paren_in_for_tuples.stderr
error: expected parentheses
 --> $DIR/missing_paren_in_for_tuples.rs:7:30
  |
7 |     for_tuples!( type Test = #( Tuple::Test ),*; );
  |                              ^
